<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tour.Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login_title">Tour.Me</string>
    <string name="Reg_title">Registration</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_caption">Password</string>
    <string name="signin_caption">Sign In</string>
    <string name="username_caption">Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="title_activity_login">MainActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="Register_caption">Register</string>
    <string name="link_caption">Register as a new user</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="nearmebtn" />
    <string name="myjourneybtn" />
    <string name="title_activity_my_jouney">MyJouneyActivity</string>
    <string name="confirmpasswordtext">Confirm Password</string>
    <string name="title_activity_map_test">MapTestActivity</string>
    <string name="title_activity_path_tracker_service">PathTrackerService</string>
    <string name="title_activity_near_me">NearMeActivity</string>
    <string name="title_activity_navigation_test">NavigationTest</string>
    <string name="title_activity_train_schedule">TrainSchedule</string>
    <string name="dateText">Date</string>
    <string name="textTime">Time</string>
    <string name="timefrom">From Time</string>
    <string name="imat">I\'m At</string>
    <string name="goingto">Going To</string>
    <string name="checktrains">Check Trains</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="title_activity_public_poi">PublicPOI</string>
    <string name="title_activity_browse_poi">BrowsePOI</string>
    <string name="title_activity_navigate">Navigate</string>
    <string name="title_activity_create_poi">CreatePOI</string>
    <string name="title_activity_create_journey">CreateJourney</string>
    <string name="title_activity_set_location">SetLocation</string>
    <string name="title_activity_add_event">AddEvent</string>
    <string name="title_activity_journey_map">JourneyMap</string>
    <string name="title_activity_event_view">EventView</string>
    <string name="search_hint">Search Here</string>
    <string name="title_activity_journey_list">JourneyList</string>
    <string name="title_activity_select_station">SelectStation</string>
    <string name="title_activity_weather_map">WeatherMap</string>
    <string name="title_activity_weather_results">WeatherResults</string>
    <string name="title_activity_dateselect">Dateselect</string>
    <string name="title_activity_path_details">PathDetails</string>
    <string name="title_activity_splash">Tour.Me</string>

</resources>